# perimtr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  index.html
perimtr/: __init__.py  cli.py  engine.py
perimtr/core/: __init__.py  config.py  datastore.py  diff_engine.py  exceptions.py  llm_engine.py  logging_config.py  module_base.py  scheduler.py  validators.py
perimtr/modules/: __init__.py  dns_enum.py  domain_security.py  http_headers.py  port_scanner.py  ssl_audit.py  vuln_check.py  web_tech.py  whois_cert.py
perimtr/reports/: __init__.py  html_report.py
perimtr/templates/: report.html
perimtr/utils/: __init__.py  network.py
tests/: generate_sample_report.py  test_config.py  test_datastore.py  test_diff_engine.py  test_exceptions.py  test_llm_engine.py  test_modules.py  test_network_utils.py  test_report.py  test_ssl_audit.py  test_validators.py  test_web_tech.py
