[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perimtr"
version = "1.0.0"
description = "Perimeter Intelligence Platform — Automated attack surface reconnaissance and change detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jesus A. Perez Duerto", email = "japd06@gmail.com"}
]
keywords = ["security", "reconnaissance", "attack-surface", "perimeter", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "python-nmap>=0.7.1",
    "dnspython>=2.4.0",
    "requests>=2.31.0",
    "python-whois>=0.9.4",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
perimtr = "perimtr.cli:main"

[project.urls]
Homepage = "https://github.com/jph4cks/perimtr"
Repository = "https://github.com/jph4cks/perimtr"
Issues = "https://github.com/jph4cks/perimtr/issues"

[tool.setuptools.packages.find]
include = ["perimtr*"]

[tool.ruff]
line-length = 100
target-version = "py39"
